// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputField rendering adds the error class if the error is set 1`] = `
<Layer
  className="TextInputField"
>
  <LabelLine
    htmlFor="test-id"
    text="Label"
  />
  <input
    aria-describedby="test-id-error"
    className="TextInputField__input TextInputField--error"
    disabled={false}
    id="test-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
  <FieldError
    id="test-id-error"
    text="Error"
  />
</Layer>
`;

exports[`TextInputField rendering renders expected elements 1`] = `
<Layer
  className="TextInputField"
>
  <LabelLine
    htmlFor="test-id"
    optional={false}
    text="Label"
  />
  <input
    aria-describedby="test-id-helper"
    className="TextInputField__input"
    id="test-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
  <FieldHelper
    id="test-id-helper"
    text="Helper text"
  />
</Layer>
`;

exports[`TextInputField rendering renders expected elements when className is set 1`] = `
<Layer
  className="TextInputField TestClass"
>
  <LabelLine
    htmlFor="test-id"
    text="Label"
  />
  <input
    aria-describedby="test-id-helper"
    className="TextInputField__input"
    disabled={false}
    id="test-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
  <FieldHelper
    id="test-id-helper"
  />
</Layer>
`;

exports[`TextInputField rendering renders expected elements when value is empty 1`] = `
<Layer
  className="TextInputField"
>
  <LabelLine
    htmlFor="test-id"
    optional={true}
    text="Label"
  />
  <input
    aria-describedby="test-id-helper"
    className="TextInputField__input"
    disabled={false}
    id="test-id"
    maxLength={10}
    name="name"
    onChange={[Function]}
    placeholder="placeholder"
    type="text"
    value=""
  />
  <FieldHelper
    id="test-id-helper"
  />
</Layer>
`;
